# manipulation_msgs-release

./: CMakeLists.txt  README.md  bloom.conf  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
msg/: Grasp.msg  GraspableObject.msg
rpm/: ros-indigo-manipulation-msgs.spec
