<?xml version="1.0"?>
<package>
  <name>manipulation_msgs</name>
  <version>0.1.0</version>
  <description>The manipulation_msgs package</description>

  <maintainer email="jbinney@willowgarage.com">Jon Binney</maintainer>


  <license>BSD</license>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>  

  <buildtool_depend>catkin</buildtool_depend>


</package>